@@ -2,7 +2,7 @@
 #ifndef COMMON_h
 #define COMMON_h
 
-static char rcsid_common_h[] = "$Id: common.h,v 1.17 2009-02-27 15:52:48 freddy77 Exp $";
+static char rcsid_common_h[] = "$Id: common.h,v 1.18 2009-03-19 13:11:41 freddy77 Exp $";
 static void *no_unused_common_h_warn[] = { rcsid_common_h, no_unused_common_h_warn };
 
 #if HAVE_CONFIG_H
@@ -23,6 +23,10 @@ static void *no_unused_common_h_warn[] = { rcsid_common_h, no_unused_common_h_wa
 
 #ifdef DBNTWIN32
 #include <windows.h>
+/* fix MingW missing declare */
+#ifndef _WINDOWS_
+#define _WINDOWS_ 1
+#endif
 #endif
 
 #include <sqlfront.h>
