@@ -5,10 +5,10 @@
 
 #include "common.h"
 
-static char software_version[] = "$Id: t0021.c,v 1.14 2009-02-01 22:29:39 jklowden Exp $";
+static char software_version[] = "$Id: t0021.c,v 1.15 2009-03-19 13:11:41 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
-
+#ifndef DBNTWIN32
 
 int failed = 0;
 
@@ -62,3 +62,10 @@ main(int argc, char **argv)
 	fprintf(stdout, "%s %s\n", __FILE__, (failed ? "failed!" : "OK"));
 	return failed ? 1 : 0;
 }
+#else
+int main(void)
+{
+	fprintf(stderr, "Not supported by MS DBLib\n");
+	return 0;
+}
+#endif
