@@ -1,3 +1,9 @@
+Thu Mar 19 14:11:31 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/dblib/unittests/common.c src/dblib/unittests/common.h:
+	* src/dblib/unittests/null.c src/dblib/unittests/t0021.c:
+	* misc/prepare_win32.sh:
+	- make dblib tests compile with ms dblib
+
 Tue Mar 17 14:34:15 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/dblib/unittests/Makefile.am: fix distribution
 
@@ -1417,4 +1423,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2753 2009-03-17 13:34:37 freddy77 Exp $
+$Id: ChangeLog,v 1.2754 2009-03-19 13:11:41 freddy77 Exp $
